# quant_ops

./: .gitignore  INSTALL.md  MANIFEST.in  README.md  README_int4_matmul.md  STRUCTURE.md  build.sh  pyproject.toml  setup.py  setup_int4_only.py  test_install.py  test_performance.py  w4a4_flatquant_dynamic.py
examples/: basic_usage.py  int4_matmul_benchmark.py
scripts/: build.sh  build_int4_matmul.sh
src/quant_ops/: __init__.py  __main__.py  meta_ops.py
src/quant_ops/ops/: __init__.py
src/quant_ops/ops/quantization/: __init__.py
src/quant_ops/ops/quantization/flatquant/: __init__.py  ops.py
src/quant_ops/ops/quantization/flatquant/kernels/: __init__.py  cuda_quant_kernel.cu
src/quant_ops/ops/quantization/int4_matmul/: __init__.py  ops.py
src/quant_ops/ops/quantization/int4_matmul/kernels/: __init__.py  cuda_int4_matmul_kernel.cu
src/quant_ops/utils/: __init__.py  decompose.py
tests/: __init__.py  test_accuracy.py  test_performance.py
